# mussia45

./: Cargo.toml  README.md  bun.lockb  justfile  nx.json  package.json
.github/workflows/: ci.yml
apps/alfred/api/: Cargo.toml  project.json
apps/alfred/api/assets/: script.js
apps/alfred/api/src/: client.rs  main.rs  swagger.rs
apps/alfred/api/src/api/todo/: mod.rs  model.rs
apps/playgrounds/api/: Cargo.toml  project.json
apps/playgrounds/cli/: Cargo.toml  project.json
apps/playgrounds/cli/src/: main.rs
apps/playgrounds/cli/src/commands/: subcommand.rs
apps/playgrounds/operator/: Cargo.toml  project.json
apps/stark/api/: Cargo.toml  project.json
apps/stark/api/src/: main.rs
libs/bl/models/: Cargo.toml  project.json
libs/cli/: Cargo.toml
libs/general/: Cargo.toml  project.json
libs/general/src/: envs.rs  lib.rs  time.rs  tracing.rs
libs/models/: Cargo.toml
libs/models/src/: book.rs  lib.rs  todo.rs
libs/proc_macros/db-resource/src/: lib.rs
libs/proc_macros/src/: lib.rs
libs/services/: Cargo.toml
libs/services/src/: lib.rs
libs/services/src/mongo/: connector.rs  filter_and_options.rs  query_param_processing.rs  serialize.rs  service.rs
libs/services/src/postgres/: connector.rs  mod.rs  queries.rs  results.rs
libs/services/src/redis/: connector.rs
libs/shared/web_server/: Cargo.toml  errors.rs  project.json
libs/shared/web_server/src/: lib.rs
manifests/gitops/apps/base/: configmap.yaml  external-secret.yaml  kustomization.yaml
manifests/gitops/apps/overlays/dev/: configmap-patch.yaml  kustomization.yaml
manifests/gitops/apps/overlays/prod/: configmap-patch.yaml  kustomization.yaml
