[package]
name = "playgrounds_cli"
version = "0.1.0"
edition = "2021"


[dependencies]
proc_macros.workspace = true
general.workspace = true
services = { workspace = true, features = ["sql"] }
#utils.workspace = true
models.workspace = true
cli.workspace = true
clap.workspace = true
anyhow.workspace = true
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["derive", "runtime"] }
serde.workspace = true
uuid.workspace = true
validator.workspace = true
serde_json.workspace = true
futures.workspace = true
sqlx.workspace = true
tokio.workspace = true
tabled.workspace = true

crossterm = { version = "0.28", features = ["serde"] }
indicatif = "0.17"
ratatui = { version = "0.29", features = ["all-widgets"] }
clap-cargo = "0.15"
colored = "2.1"
thiserror = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
